# django

./: pyproject.toml
iot/: urls.py
mysite/: db.sqlite3  settings.py  urls.py
mysite/iot/: models.py  urls.py  views.py
mysite/iot/templates/iot/: message.html
mysite/mysite/: settings.py  urls.py
mysite/polls/: views.py
mysite/polls/migrations/: 0001_initial.py
polls/: tests.py  views.py
